--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>OMNIFOOD</title>
   </head>
   <body>
+    <header></header>
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
@@ -26,12 +27,22 @@
           </p>
           <a href="#" class="btn btn-full margin-right">Start eating well</a>
           <a href="" class="btn btn-outline">Learn more &darr;</a>
-        </div>
-        <div class="delivered-meals">
-          <div class="delivered-img">
-            <img src="" alt="">
+          <div class="delivered-meals">
+            <div class="delivered-img">
+              <img src="/images/customer/customer-1.jpg" alt="face-images" />
+              <img src="/images/customer/customer-2.jpg" alt="face-images" />
+              <img src="/images/customer/customer-3.jpg" alt="face-images" />
+              <img src="/images/customer/customer-4.jpg" alt="face-images" />
+              <img src="/images/customer/customer-5.jpg" alt="face-images" />
+              <img src="/images/customer/customer-6.jpg" alt="face-images" />
+
+              <p class="delivered-text">
+                We have <span>250,000+</span>Meals delivered last year
+              </p>
+            </div>
           </div>
         </div>
+
         <div class="hero-image-box">
           <img src="/images/chair.png" alt="" class="hero-img" />
         </div>
