--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>OMNIFOOD</title>
   </head>
   <body>
-    <header></header>
+    <!-- <header></header> -->
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
@@ -35,6 +35,8 @@
               <img src="/images/customer/customer-4.jpg" alt="face-images" />
               <img src="/images/customer/customer-5.jpg" alt="face-images" />
               <img src="/images/customer/customer-6.jpg" alt="face-images" />
+              <!-- <img src="/images/customer/rashka.jpg" alt="face-images" /> -->
+              <img src="/images/customer/rashkaa.jpg" alt="face-images" />
 
               <p class="delivered-text">
                 We have <span>250,000+</span>Meals delivered last year
