--- a/index.html
+++ b/index.html
@@ -13,42 +13,151 @@
     <title>OMNIFOOD</title>
   </head>
   <body>
-    <!-- <header></header> -->
-    <section class="section-hero">
-      <div class="hero">
-        <div class="hero-text-box">
-          <h1 class="heading-primary">
-            A healthy meal delivered to your door, every single day
-          </h1>
-          <p class="hero-description">
-            The smart 365-days-per-year food subscription that will make you eat
-            healthy again. Tailored to your personal tastes and nutritional
-            needs.
-          </p>
-          <a href="#" class="btn btn-full margin-right">Start eating well</a>
-          <a href="" class="btn btn-outline">Learn more &darr;</a>
-          <div class="delivered-meals">
-            <div class="delivered-img">
-              <img src="/images/customer/customer-1.jpg" alt="face-images" />
-              <img src="/images/customer/customer-2.jpg" alt="face-images" />
-              <img src="/images/customer/customer-3.jpg" alt="face-images" />
-              <img src="/images/customer/customer-4.jpg" alt="face-images" />
-              <img src="/images/customer/customer-5.jpg" alt="face-images" />
-              <img src="/images/customer/customer-6.jpg" alt="face-images" />
-              <!-- <img src="/images/customer/rashka.jpg" alt="face-images" /> -->
-              <img src="/images/customer/rashkaa.jpg" alt="face-images" />
+    <header class="header">
+      <img
+        src="/images/meals/omnifood-logo.png"
+        class="logo"
+        alt="omnifood logo"
+      />
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="#">HOME</a></li>
+          <li><a class="main-nav-link" href="#">ABOUT AS</a></li>
+          <li><a class="main-nav-link" href="#">SERVICE</a></li>
+          <li><a class="main-nav-link" href="#">GALLERY</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">
+              A healthy meal delivered to your door, every single day
+            </h1>
+            <p class="hero-description">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
+            </p>
+            <a href="#" class="btn btn-full margin-right">Start eating well</a>
+            <a href="" class="btn btn-outline">Learn more &darr;</a>
+            <div class="delivered-meals">
+              <div class="delivered-img">
+                <img src="/images/customer/customer-1.jpg" alt="face-images" />
+                <img src="/images/customer/customer-2.jpg" alt="face-images" />
+                <img src="/images/customer/customer-3.jpg" alt="face-images" />
+                <img src="/images/customer/customer-4.jpg" alt="face-images" />
+                <img src="/images/customer/customer-5.jpg" alt="face-images" />
+                <img src="/images/customer/customer-6.jpg" alt="face-images" />
+                <!-- <img src="/images/customer/rashka.jpg" alt="face-images" /> -->
+                <img src="/images/customer/rashkaa.jpg" alt="face-images" />
 
-              <p class="delivered-text">
-                We have <span>250,000+</span>Meals delivered last year
-              </p>
+                <p class="delivered-text">
+                  We have <span>250,000+</span>Meals delivered last year
+                </p>
+              </div>
             </div>
           </div>
+
+          <div class="hero-image-box">
+            <img src="/images/chair.png" alt="" class="hero-img" />
+          </div>
+        </div>
+      </section>
+      <!-- <section class="section-main">
+        <div class="contianer">
+          <span class="subheading">How it works</span>
+          <h2 class="heading-secondary">
+            Your daily dose of health in 3 simple steps
+          </h2>
+        </div>
+        <div class="container">
+          <div class="step-txet-box">
+            <p class="step-number">01</p>
+            <h3 class=""></h3>
+          </div>
+          <div class="step-img-box">
+            <img
+              src="/images/App/app-screen-1.png"
+              class="step-img"
+              alt="iphone app"
+            />
+          </div>
+
+        </div>
+      </section> -->
+      <section class="section-how">
+        <div class="container">
+          <span class="subheading">How it works</span>
+          <h2 class="heading-secondary">
+            Your daily dose of health in 3 simple steps
+          </h2>
         </div>
 
-        <div class="hero-image-box">
-          <img src="/images/chair.png" alt="" class="hero-img" />
+        <div class="container grid grid--2-cols grid--center-v">
+          <!-- STEP 01 -->
+          <div class="step-text-box">
+            <p class="step-number">01</p>
+            <h3 class="heading-tertiary">
+              Tell us what you like (and what not)
+            </h3>
+            <p class="step-description">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
+            </p>
+          </div>
+          <div class="step-img-box">
+            <img
+              src="/images/App/app-screen-1.png"
+              class="step-img"
+              alt="iPhone app
+            preferences selection screen"
+            />
+          </div>
+
+          <!-- STEP 02 -->
+          <div class="step-img-box">
+            <img
+              src="images/App/app-screen-2.png"
+              class="step-img"
+              alt="iPhone app
+            meal approving plan screen"
+            />
+          </div>
+          <div class="step-text-box">
+            <p class="step-number">02</p>
+            <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+            <p class="step-description">
+              Once per week, approve the meal plan generated for you by Omnifood
+              AI. You can change ingredients, swap entire meals, or even add
+              your own recipes.
+            </p>
+          </div>
+
+          <!-- STEP 03 -->
+          <div class="step-text-box">
+            <p class="step-number">03</p>
+            <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+            <p class="step-description">
+              Best chefs in town will cook your selected meal every day, and we
+              will deliver it to your door whenever works best for you. You can
+              change delivery schedule and address daily!
+            </p>
+          </div>
+          <div class="step-img-box">
+            <img
+              src="/images/App/app-screen-3.png"
+              class="step-img"
+              alt="iPhone app
+            delivery screen"
+            />
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
