--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
         </div>
       </section>
 
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As feature in</h2>
+          <div class="logos">
+            <img src="/images/logo/techcrunch.png" alt="Techcrunch logo" />
+            <img
+              src="/images/logo/business-insider.png"
+              alt="Business Insider logo"
+            />
+            <img
+              src="/images/logo/the-new-york-times.png"
+              alt="The New York Times logo"
+            />
+            <img src="/images/logo/forbes.png" alt="Forbes logo" />
+            <img src="/images/logo/usa-today.png" alt="USA Today logo" />
+          </div>
+        </div>
+      </section>
+
       <section class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
