--- a/index.html
+++ b/index.html
@@ -156,6 +156,96 @@
           </div>
         </div>
       </section>
+
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading">MEALS</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000 recipes
+          </h2>
+        </div>
+        <div class="container grid grid-3-cols">
+          <div class="meal">
+            <img
+              src="/images/meals/meal-1.jpg"
+              alt="Japanese Gyozas"
+              class="meal-img"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag">Vegetarian</span>
+              </div>
+              <!-- <span class="tag"></span>
+            <span class="tag"></span>
+            <span class="tag"></span>
+            <span class="tag"></span> -->
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon
+                  ><span><strong>600</strong> calories</span>
+                </li>
+
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="speedometer-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>74</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon
+                  ><span><strong>4.9</strong> rating (537)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="meal">
+            <img
+              src="/images/meals/meal-2.jpg"
+              alt="Japanese Gyozas"
+              class="meal-img"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag-vegan">vegan</span>
+              </div>
+              <span class="tag tag-peleo">peleo</span>
+              <!--  <span class="tag"></span>
+            <span class="tag"></span>
+            <span class="tag"></span> -->
+              <p class="meal-title">Avocado salad</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon
+                  ><span><strong>400</strong> calories</span>
+                </li>
+
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="speedometer-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>72</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon
+                  ><span><strong>4.8</strong> rating (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="list">list</div>
+        </div>
+      </section>
     </main>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
