--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </div>
       </section>
 
-      <!-- <section class="section-testimonials grid grid--2-cols">
+      <section class="section-testimonials grid grid--2-cols">
         <div class="testimonial-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">
@@ -436,7 +436,7 @@
         </div>
 
         <div class="gallery">GALLERY</div>
-      </section> -->
+      </section>
     </main>
     <script
       type="module"
