--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             Once you try it, you can't go back
           <div class="testimonials">
             <figure class="testimonial">
-              <img class="testimonial-img" src="" alt="photo of customer" />
+              <img class="testimonial-img" src="/images/customer/steve.jpg" alt="photo of customer" />
               <blockquote class="testimonial-text">
                 Inexpensive, healthy and great-tasting meals, without even
                 having to order manually! It feels truly magical.
@@ -409,7 +409,7 @@
               <p class="testimonial-name">&mdash; ben hanley</p>
             </figure>
             <figure class="testimonial">
-              <img class="testimonial-img" src="" alt="photo of customer" />
+              <img class="testimonial-img" src="/images/customer/rashkaa.jpg" alt="photo of customer" />
               <blockquote class="testimonial-text">
                 I got Omnifood for the whole family, and it frees up so much
                 time! Plus, everything is organic and vegan and without plastic.
@@ -417,7 +417,7 @@
               <p class="testimonial-name">&mdash; RASHKA</p>
             </figure>
             <figure class="testimonial">
-              <img class="testimonial-img" src="" alt="photo of customer" />
+              <img class="testimonial-img" src="/images/customer/dave.jpg" alt="photo of customer" />
               <blockquote class="testimonial-text">
                 The AI algorithm is crazy good, it chooses the right meals for
                 me every time. It's amazing not to worry about food anymore!
@@ -425,7 +425,7 @@
               <p class="testimonial-name">&mdash; Steve Miller<</p>
             </figure>
             <figure class="testimonial">
-              <img class="testimonial-img" src="" alt="photo of customer" />
+              <img class="testimonial-img" src="/images/customer/customer-4.jpg" alt="photo of customer" />
               <blockquote class="testimonial-text">
                 Omnifood is a life saver! I just started a company, so there's
                 no time for cooking. I couldn't live without my daily meals now!
@@ -435,7 +435,12 @@
           </div>
         </div>
 
-        <div class="gallery">GALLERY</div>
+        <div class="gallery">
+          <figure class="gallery-item">
+            <img src="/images/gallery/gallery-1.jpg" alt="photo of beatufully arranged food">
+          
+          </figure>
+        </div>
       </section>
     </main>
     <script
