--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="/CSS/responsive.css">
     <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,7 +38,12 @@
           <li><a class="main-nav-link" href="#">Testimonails</a></li>
           <li><a class="main-nav-link" href="#">Pricing</a></li>
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+   
         </ul>
+               <li><a class=" nav-res" href=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="nav-icon">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+</svg>
+</a></li>
       </nav>
     </header>
     <main>
